--- a/graylog_collector_sidecar/map.jinja
+++ b/graylog_collector_sidecar/map.jinja
@@ -1,13 +1,14 @@
 {%- set osarch = salt['grains.get']('osarch') %}
+{% set version = '0.1.6' %}
 {%- load_yaml as base_defaults %}
 Debian:
-  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/0.1.5/collector-sidecar_0.1.5-1_{{ osarch }}.deb
+  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/{{ version }}/collector-sidecar_{{ version }}-1_{{ osarch }}.deb
   service: collector-sidecar.service
 RedHat:
-  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/0.1.5/collector-sidecar_0.1.5-1.{{ osarch }}.rpm
+  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/{{ version }}/collector-sidecar_{{ version }}-1.{{ osarch }}.rpm
   service: collector-sidecar.service
 Suse:
-  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/0.1.5/collector-sidecar_0.1.5-1.{{ osarch }}.rpm
+  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/{{ version }}/collector-sidecar_{{ version }}-1.{{ osarch }}.rpm
   service: collector-sidecar.service
 {%- endload %}
 
