--- a/graylog_sidecar/map.jinja
+++ b/graylog_sidecar/map.jinja
@@ -1,14 +1,18 @@
 {%- set osarch = salt['grains.get']('osarch') %}
-{% set version = '1.0.1' %}
+{% set sidecar_version = '1.0.1' %}
+{% set filebeat_version = '7.1.1' %}
 {%- load_yaml as base_defaults %}
 Debian:
-  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/{{ version }}/graylog-sidecar_{{ version }}-1_{{ osarch }}.deb
+  sidecar: https://github.com/Graylog2/collector-sidecar/releases/download/{{ sidecar_version }}/graylog-sidecar_{{ sidecar_version }}-1_{{ osarch }}.deb
+  filebeat: https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-{{ filebeat_version }}-{{ osarch }}.deb
   service: graylog-sidecar.service
 RedHat:
-  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/{{ version }}/graylog-sidecar_{{ version }}-1.{{ osarch }}.rpm
+  sidecar: https://github.com/Graylog2/collector-sidecar/releases/download/{{ sidecar_version }}/graylog-sidecar_{{ sidecar_version }}-1.{{ osarch }}.rpm
+  filebeat: https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-{{ filebeat_version }}-{{ osarch }}.rpm
   service: graylog-sidecar.service
 Suse:
-  pkgurl: https://github.com/Graylog2/collector-sidecar/releases/download/{{ version }}/graylog-sidecar_{{ version }}-1.{{ osarch }}.rpm
+  sidecar: https://github.com/Graylog2/collector-sidecar/releases/download/{{ sidecar_version }}/graylog-sidecar_{{ sidecar_version }}-1.{{ osarch }}.rpm
+  filebeat: https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-{{ filebeat_version }}-{{ osarch }}.rpm
   service: graylog-sidecar.service
 {%- endload %}
 
